--- a/public/addUser.html
+++ b/public/addUser.html
@@ -70,7 +70,7 @@ function add(){
     }
 
     // post user
-    const url = 'http://localhost:3000/add';
+    const url = 'https://samuelcicdpipeline.herokuapp.com/add';
     superagent
         .post(url)
         .send(user)
