--- a/public/addUsers.html
+++ b/public/addUsers.html
@@ -55,7 +55,7 @@ function add(){
         
         // post use data
         // const url = 'http://138.197.111.251:3001/add';
-        const url = 'http://localhost:3000/add';
+        const url = 'https://samuelcicdpipeline.herokuapp.com/add';
         superagent
             .post(url)
             .send(user)
